3974.	[bug]		handle DH_compute_key() failure correctly in
			openssldh_link.c. [RT #37477]

3972.	[bug]		Fix host's usage statement. [RT #37397]

3971.	[bug]		Reduce the cascasding failures due to a bad $TTL line
			in named-checkconf / named-checkzone. [RT #37138]

3970.   [contrib]       Fixed a use after free bug in the SDB LDAP driver.
			[RT #37237]

3969.	[test]		Added 'delv' system test. [RT #36901]

3968.	[bug]		Silence spurious log messages when using 'named -[46]'.
			[RT #37308]

3967.	[test]		Add test for inlined signed zone in multiple views
			with different DNSKEY sets. [RT #35759]

3966.	[bug]		Missing dns_db_closeversion call in receive_secure_db.
			[RT #35746]

3962.	[bug]		'dig +topdown +trace +sigchase' address unhandled error
			conditions. [RT #34663]

3961.	[bug]		Forwarding of SIG(0) signed UPDATE messages failed with
			BADSIG.  [RT #37216]

3960.	[bug]		'dig +sigchase' could loop forever. [RT #37220]

3959.	[bug]		Updates could be lost if they arrived immediately
			after a rndc thaw. [RT #37233]

3958.	[bug]		Detect when writeable files have multiple references
			in named.conf. [RT #37172]

3957.	[bug]		"dnssec-keygen -S" failed for ECCGOST, ECDSAP256SHA256
			and ECDSAP384SHA384. [RT #37183]

3955.	[bug]		Notify messages due to changes are no longer queued
			behind startup notify messages. [RT #24454]

3954.	[bug]		Unchecked mutex init in dlz_dlopen_driver.c [RT #37112]

3953.	[bug]		Don't escape semi-colon in TXT fields. [RT #37159]

3952.	[bug]		dns_name_fullcompare failed to set *nlabelsp when the
			two name pointers were the same. [RT #37176]

	--- 9.10.1 released ---

3950.	[port]		Changed the bin/python Makefile to work around a
			bmake bug in FreeBSD 10 and NetBSD 6. [RT #36993]

3948.	[port]		solaris: RCVBUFSIZE was too large on Solaris with
			--with-tuning=large. [RT #37059]

	--- 9.10.1rc2 released ---

3947.	[cleanup]	Set the executable bit on libraries when using
			libtool. [RT #36786]
